istio/old/helm/sample/nginx/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx
  name: svc-nginx
  namespace: nginx
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
  selector:
    app: nginx
  type: ClusterIP
