istio/old/helm/sample/nginx/vs-nginx.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice
  namespace: nginx
spec:
  gateways:
    - http-gateway
  hosts:
    - '*'
  http:
    - route:
        - destination:
            host: svc-nginx.nginx.svc.cluster.local
            port:
              number: 80
